--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -173,7 +173,6 @@ deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
-deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -674,7 +673,6 @@ deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
-deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -704,12 +702,61 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:23ae:4067:bed4:a129;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b190:21e6:40ba:73e1;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:10::19eb:717b;
+deny 2a10:1fc0:10::28fc:90d4;
+deny 2a10:1fc0:10::2a17:5b54;
+deny 2a10:1fc0:10::2cf4:6ba2;
+deny 2a10:1fc0:10::2d91:1a2d;
+deny 2a10:1fc0:10::3903:457;
+deny 2a10:1fc0:10::3919:de17;
+deny 2a10:1fc0:10::3a1:5e9f;
+deny 2a10:1fc0:10::3dc5:e694;
+deny 2a10:1fc0:10::3eb3:d1d0;
+deny 2a10:1fc0:10::3ec1:2b1e;
+deny 2a10:1fc0:10::40d8:83c;
+deny 2a10:1fc0:10::42d2:f78b;
+deny 2a10:1fc0:10::5138:4dfa;
+deny 2a10:1fc0:10::5719:261d;
+deny 2a10:1fc0:10::61d9:7617;
+deny 2a10:1fc0:10::61e2:c84d;
+deny 2a10:1fc0:10::627f:3c31;
+deny 2a10:1fc0:10::694a:c359;
+deny 2a10:1fc0:10::6b4c:30fc;
+deny 2a10:1fc0:10::6c2e:469a;
+deny 2a10:1fc0:10::6d92:d6ab;
+deny 2a10:1fc0:10::6fde:4b8d;
+deny 2a10:1fc0:10::792f:38b4;
+deny 2a10:1fc0:10::895d:abf9;
+deny 2a10:1fc0:10::8a03:d023;
+deny 2a10:1fc0:10::8b78:d42e;
+deny 2a10:1fc0:10::8d4d:eca2;
+deny 2a10:1fc0:10::9a73:d4f2;
+deny 2a10:1fc0:10::9d80:c9f7;
+deny 2a10:1fc0:10::9e08:e765;
+deny 2a10:1fc0:10::a3a5:49da;
+deny 2a10:1fc0:10::a458:8b37;
+deny 2a10:1fc0:10::a63c:724c;
+deny 2a10:1fc0:10::b571:1205;
+deny 2a10:1fc0:10::bf3f:d195;
+deny 2a10:1fc0:10::c129:61a1;
+deny 2a10:1fc0:10::c385:c7fa;
+deny 2a10:1fc0:10::c7c7:2f84;
+deny 2a10:1fc0:10::d5a6:a292;
+deny 2a10:1fc0:10::d5d0:db30;
+deny 2a10:1fc0:10::d6b7:b3e9;
+deny 2a10:1fc0:10::dbe0:6173;
+deny 2a10:1fc0:10::dbe9:7852;
+deny 2a10:1fc0:10::e4c8:9020;
+deny 2a10:1fc0:10::ea87:5496;
+deny 2a10:1fc0:10::fa6c:cac5;
+deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:1467::;
