--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -9,7 +9,6 @@ deny 2001:41d0:1008:20d1::1;
 deny 2001:41d0:2:9161::1;
 deny 2001:41d0:304:200::3348;
 deny 2001:41d0:304:200::3ea4;
-deny 2001:41d0:304:200::9dce;
 deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
@@ -173,6 +172,7 @@ deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
+deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -409,7 +409,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -428,7 +427,6 @@ deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
-deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:16::1;
@@ -673,6 +671,7 @@ deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
+deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
