Update lists at 20250615-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,6 +66,7 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -84,6 +85,7 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.228.160.190;
 allow 109.70.100.1;
 allow 109.70.100.2;
 allow 109.70.100.3;
@@ -239,7 +241,6 @@ allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.104.120.10;
-allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
 allow 185.107.57.64;
@@ -575,10 +576,10 @@ allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.112;
 allow 193.218.118.156;
-allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.237.221.228;
@@ -598,7 +599,6 @@ allow 194.15.36.117;
 allow 194.163.157.49;
 allow 194.233.174.56;
 allow 194.26.192.77;
-allow 194.31.159.221;
 allow 194.53.137.156;
 allow 194.87.55.98;
 allow 195.176.3.23;
@@ -652,6 +652,7 @@ allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
+allow 2001:1c02:1a18:5700:7b6:bf5f:7e8:70d9;
 allow 200.122.181.2;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
@@ -897,6 +898,7 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.199.199.250;
 allow 217.62.118.174;
+allow 23.129.64.130;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
@@ -1009,6 +1011,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1064,6 +1067,7 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:f530:8002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
+allow 2620:18c:0:192::e0:130;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
 allow 2620:7:6001::103;
@@ -1273,7 +1277,6 @@ allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:3000::10;
-allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
@@ -1507,6 +1510,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1536,10 +1540,10 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b190:21e6:40ba:73e1;
-allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
@@ -1659,6 +1663,7 @@ allow 45.138.16.113;
 allow 45.138.16.161;
 allow 45.138.16.164;
 allow 45.138.16.178;
+allow 45.138.16.205;
 allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.231;
@@ -1676,7 +1681,6 @@ allow 45.141.215.133;
 allow 45.141.215.167;
 allow 45.141.215.169;
 allow 45.141.215.17;
-allow 45.141.215.177;
 allow 45.141.215.19;
 allow 45.141.215.200;
 allow 45.141.215.21;
@@ -1766,6 +1770,7 @@ allow 46.250.243.29;
 allow 46.30.188.218;
 allow 46.38.243.210;
 allow 50.7.40.39;
+allow 5.101.82.67;
 allow 5.101.84.151;
 allow 5.104.84.183;
 allow 5.104.86.6;
@@ -1882,6 +1887,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1917,6 +1923,7 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
