Update lists at 20250615-0301

--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -170,7 +170,6 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -226,7 +225,23 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
-set_real_ip_from 2620:18c:0:192::e0:130;
+set_real_ip_from 2620:18c:0:192::e0:131;
+set_real_ip_from 2620:18c:0:192::e0:132;
+set_real_ip_from 2620:18c:0:192::e0:134;
+set_real_ip_from 2620:18c:0:192::e0:135;
+set_real_ip_from 2620:18c:0:192::e0:137;
+set_real_ip_from 2620:18c:0:192::e0:138;
+set_real_ip_from 2620:18c:0:192::e0:139;
+set_real_ip_from 2620:18c:0:192::e0:140;
+set_real_ip_from 2620:18c:0:192::e0:141;
+set_real_ip_from 2620:18c:0:192::e0:142;
+set_real_ip_from 2620:18c:0:192::e0:143;
+set_real_ip_from 2620:18c:0:192::e0:144;
+set_real_ip_from 2620:18c:0:192::e0:145;
+set_real_ip_from 2620:18c:0:192::e0:146;
+set_real_ip_from 2620:18c:0:192::e0:148;
+set_real_ip_from 2620:18c:0:192::e0:149;
+set_real_ip_from 2620:18c:0:192::e0:153;
 set_real_ip_from 2620:7:6001::101;
 set_real_ip_from 2620:7:6001::102;
 set_real_ip_from 2620:7:6001::103;
@@ -405,6 +420,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -435,6 +451,7 @@ set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:3000::10;
+set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
