--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -66,7 +66,6 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
-set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -241,6 +240,7 @@ set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.104.120.10;
+set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.107.57.64;
@@ -884,6 +884,7 @@ set_real_ip_from 209.141.54.218;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.58.254;
 set_real_ip_from 209.141.61.52;
+set_real_ip_from 209.182.214.58;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.34.142.89;
 set_real_ip_from 212.38.189.186;
@@ -898,7 +899,23 @@ set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.199.199.250;
 set_real_ip_from 217.62.118.174;
-set_real_ip_from 23.129.64.130;
+set_real_ip_from 23.129.64.131;
+set_real_ip_from 23.129.64.132;
+set_real_ip_from 23.129.64.134;
+set_real_ip_from 23.129.64.135;
+set_real_ip_from 23.129.64.137;
+set_real_ip_from 23.129.64.138;
+set_real_ip_from 23.129.64.139;
+set_real_ip_from 23.129.64.140;
+set_real_ip_from 23.129.64.141;
+set_real_ip_from 23.129.64.142;
+set_real_ip_from 23.129.64.143;
+set_real_ip_from 23.129.64.144;
+set_real_ip_from 23.129.64.145;
+set_real_ip_from 23.129.64.146;
+set_real_ip_from 23.129.64.148;
+set_real_ip_from 23.129.64.149;
+set_real_ip_from 23.129.64.153;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
@@ -1011,7 +1028,6 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1067,7 +1083,23 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
-set_real_ip_from 2620:18c:0:192::e0:130;
+set_real_ip_from 2620:18c:0:192::e0:131;
+set_real_ip_from 2620:18c:0:192::e0:132;
+set_real_ip_from 2620:18c:0:192::e0:134;
+set_real_ip_from 2620:18c:0:192::e0:135;
+set_real_ip_from 2620:18c:0:192::e0:137;
+set_real_ip_from 2620:18c:0:192::e0:138;
+set_real_ip_from 2620:18c:0:192::e0:139;
+set_real_ip_from 2620:18c:0:192::e0:140;
+set_real_ip_from 2620:18c:0:192::e0:141;
+set_real_ip_from 2620:18c:0:192::e0:142;
+set_real_ip_from 2620:18c:0:192::e0:143;
+set_real_ip_from 2620:18c:0:192::e0:144;
+set_real_ip_from 2620:18c:0:192::e0:145;
+set_real_ip_from 2620:18c:0:192::e0:146;
+set_real_ip_from 2620:18c:0:192::e0:148;
+set_real_ip_from 2620:18c:0:192::e0:149;
+set_real_ip_from 2620:18c:0:192::e0:153;
 set_real_ip_from 2620:7:6001::101;
 set_real_ip_from 2620:7:6001::102;
 set_real_ip_from 2620:7:6001::103;
@@ -1247,6 +1279,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1277,6 +1310,7 @@ set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:3000::10;
+set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
@@ -1784,6 +1818,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1858,6 +1893,7 @@ set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
 set_real_ip_from 8.211.1.212;
+set_real_ip_from 82.153.138.125;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
